# egypt_adventure

./: .gitignore  CMakeLists.txt  README.md  combined_code.txt
assets/configs/: config.json
assets/maps/: list.txt  map.txt
doc/: Egypt_Adventure.xlsx  gdd.docx
include/: BattleSystem.hpp  Entity.hpp  GameObject.hpp  GameView.hpp  Inventory.hpp  Item.hpp  Map.hpp  Player.hpp  Pole.hpp  PriorityQueue.hpp  Tile.hpp  Torch.hpp
include/config/: Config.hpp
include/dice/: DiceRoll.hpp
include/effects/: Effect.hpp  EffectManager.hpp  HealEffect.hpp  SandShield.hpp
include/entities/: Character.hpp  Entity.hpp  Mummy.hpp  Player.hpp  SandGolem.hpp  Scarab.hpp  Skeleton.hpp
include/enums/: PoleType.hpp  TileType.hpp
include/items/: Bullet.hpp  HealPotion.hpp  Item.hpp  Torch.hpp
include/tiles/: FloorTile.hpp  Tile.hpp  TileType.hpp  WallTile.hpp
include/weapons/: Weapon.hpp
src/: BattleSystem.cpp  Bullet.cpp  Character.cpp  Config.cpp  Effect.cpp  EffectManager.cpp  Entity.cpp  FloorTile.cpp  GameObject.hpp  GameView.cpp  GroupAttackBonus.cpp  HealEffect.cpp  Inventory.cpp  Inventory.hpp  Item.cpp  Map.cpp  Map.hpp  Mummy.cpp  Phantom.cpp  Player.cpp  Pole.cpp  PriorityQueue.cpp  SandGolem.cpp  SandShield.cpp  SandTile.cpp  Scarab.cpp  Skeleton.cpp  Tile.cpp  Torch.cpp  WallTile.cpp  Weapon.cpp  main.cpp
src/ai/: AIComponent.cpp  AIComponent.hpp  MummyAIComponent.cpp  MummyAIComponent.hpp  SandAIComponent.cpp  SandAIComponent.hpp  SandGolemAIComponent.cpp  SandGolemAIComponent.hpp
src/commands/: ActivateSandShieldCommand.cpp  ActivateSandShieldCommand.hpp  AmuletsMenuCommand.cpp  AmuletsMenuCommand.hpp  AttackCommand.cpp  AttackCommand.hpp  Command.hpp  CoverWithSandCommand.cpp  CoverWithSandCommand.hpp  ExitCommand.cpp  ExitCommand.hpp  HealCommand.cpp  HealCommand.hpp  InteractCommand.cpp  InteractCommand.hpp  InventoryCommand.cpp  InventoryCommand.hpp  MoveCommand.cpp  MoveCommand.hpp  ReloadCommand.cpp  ReloadCommand.hpp  SummonMinionsCommand.cpp  SummonMinionsCommand.hpp
src/config/: Config.cpp  Config.hpp
src/dice/: DiceRoll.hpp
src/effects/: EffectManager.cpp  EffectManager.hpp  FearEffect.cpp  FearEffect.hpp  GroupAttackBonus.hpp  HealEffect.cpp
src/entities/: Character.cpp  Character.hpp  Entity.cpp  Entity.hpp  Mummy.cpp  Mummy.hpp  Phantom.cpp  Phantom.hpp  SandGolem.cpp  SandGolem.hpp  Scarab.cpp  Scarab.hpp  Skeleton.cpp  Skeleton.hpp
src/game/: Game.cpp  Game.hpp  GameController.cpp  GameController.hpp  GameView.cpp  GameView.hpp  InputHandler.cpp  InputHandler.hpp
src/interfaces/: Interface.hpp
src/items/: Bullet.cpp  Bullet.hpp  Grenade.cpp  Grenade.hpp  HealPotion.cpp  HealPotion.hpp  Item.cpp  Item.hpp  ThrowableItem.cpp  ThrowableItem.hpp  Torch.cpp  Torch.hpp  TutankhamunsCrown.cpp  TutankhamunsCrown.hpp  TutankhamunsСrown.cpp  TutankhamunsСrown.hpp
src/map/: BSPNode.cpp  BSPNode.hpp  BSPTree.cpp  BSPTree.hpp  CorridorGenerator.cpp  CorridorGenerator.hpp  Map.cpp  Map.hpp  MapGenerator.cpp  MapGenerator.hpp  RoomGenerator.cpp  RoomGenerator.hpp
src/modifiers/: DefenseModifier.hpp  DodgeChanceModifier.hpp  HealthModifier.hpp  MagicalDamageModifier.hpp  Modifier.hpp  PhysicalDamageModifier.hpp  PriorityModifier.hpp
src/states/: GameState.cpp  GameState.hpp  LevelState.cpp  LevelState.hpp
src/tiles/: BedrockTile.cpp  BedrockTile.hpp  FloorTile.cpp  FloorTile.hpp  InteractTile.hpp  SandTile.cpp  SandTile.hpp  StairTile.cpp  StairTile.hpp  Tile.cpp  Tile.hpp  TileType.hpp  TorchTile.cpp  TorchTile.hpp  WallTile.cpp  WallTile.hpp
src/utils/: BattleSystem.cpp  BattleSystem.hpp  EventManager.cpp  EventManager.hpp  GameObject.hpp  Inventory.cpp  Inventory.hpp
test/: battleTest.cpp  mapTest.cpp
(+27 files in other folders)
